<resources>
    <string name="app_name">Music Player</string>
    <string name="all_songs">All Songs</string>
    <string name="genres">Genres</string>
    <string name="favorites">Favorites</string>
    <string name="email_us">Email Us</string>
    <string name="music_player">Music Player</string>
    <string name="song_name">Song Name</string>
    <string name="genre">Genre</string>
    <string name="is_this_a_favorite">Is This A Favorite?</string>
    <string name="done">Done</string>
    <string name="now_playing">Now Playing</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="home">Home</string>
</resources>