<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/song_list_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:fontFamily="sans-serif"
        android:text="@string/music_player"
        android:textColor="@color/black"
        android:textSize="68sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/all_songs_button"
            style="@style/customButton"
            android:background="@drawable/custom_button_border"
            android:text="@string/all_songs"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/favorites_button"
            style="@style/customButton"
            android:background="@drawable/custom_button_border"
            android:text="@string/favorites"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/email_us_button"
            style="@style/customButton"
            android:background="@drawable/custom_button_border"
            android:text="@string/email_us"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>