<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/song_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="55dp"
        android:hint="@string/song_name"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/arist_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:hint="artist name"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/genre_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:hint="@string/genre"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/favorite_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_this_a_favorite"
        android:textSize="24sp" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@null" />

</LinearLayout>